# accouncable

./: .gitignore  CLAUDE.md  dashboard.py  pyproject.toml  run_analysis.py
data/companies_house/: Achieving for Children Community Interest Co.json  Adson Construction Ltd.json  Advance Housing _ Support Ltd.json  Advanced Demand Side Management Ltd.json  Advanced Tree Services Ltd.json  Ali_s Inn Ltd t_a Oscar Lodge.json  All Care _GB_ Limited.json  Altwood Church of England School.json  Always Growing Limited.json  Ambleglow Ltd.json  Ambrose Adrian Healthcare Ltd.json  Aon UK Ltd.json  Aptus Estate Agents.json  Aptus TA Ltd.json  Ascendancy Partnership Trust.json  Askews and Holts Library Services Ltd.json  Avery Healthcare t_a Ascot Grange.json  BARKLAND TREE SPECIALISTS.json  BHP Mechanical Services Ltd.json  BUPA Care Home _CFH Care_ Ltd t_a  BUPA Global and UK.json  Badenoch _ Clark Limited t_a Adecco.json  Beam Up Ltd.json  Ben Motor _ Allied Trades Ben Fund t_a Lynwood.json  Berkshire HC NHS FT- BH Nursery Fees.json  Berkshire Healthcare NHS Foundation Trust.json  Berkshire Pension Fund.json  Berkshire Property Management Limited.json  Bibliographic Data Services Ltd.json  Boulters Lock Residential Home.json  Bright Futures Care Ltd.json  Bright Horizons Family Solutions Limited.json  Brooklyns Residential LTD.json  Browns Community Services CIC.json  Bupa Care Services Commissioning Limited.json  Busy Bees at Hall Place Nursery.json  Busy Bees at Maidenhead.json  Busy Bees at Norden Road.json  CCS Media Ltd.json  (+170 more)
reports/: rbwm_analysis.xlsx
(+10 files in other folders)
