[project]
name = "accountable"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
]
